--- a/15 - LocalStorage/style.css
+++ b/15 - LocalStorage/style.css
@@ -59,12 +59,12 @@
     }
 
     .plates input + label:before {
-      content: '⬜️';
+      content: 'x';
       margin-right: 10px;
     }
 
     .plates input:checked + label:before {
-      content: '🌮';
+      content: 'v';
     }
 
     .add-items {
